SRTSP movie streaming over UDP with DTLS done
Co-authored-by: Inês Raquel <irsimoes@users.noreply.github.com>

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,5 +1,6 @@
 localdelivery:224.7.7.7:7777
-remote:localhost:9999
+proxyUDP:localhost:9999
+streamingUDP:localhost:9998
 signaling:localhost:42069
 streaming:localhost:42169
 
